# openchains

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  behave.ini  docker-compose.yml  noop.js  pyproject.toml  pytest.ini  run.sh  setup-frontend-linters.sh  setup-linters.sh
backend/app/: config.py  db_config.py  main.py
backend/scripts/: create_admin.py  migrate.py
backend/tests/: config.py  conftest.py
backend/tests/bdd/: environment.py
backend/tests/bdd/features/: login.feature  token.feature
backend/tests/bdd/steps/: login_steps.py
backend/tests/integration/: __init__.py  test_auth_flow.py
backend/tests/unit/: helpers.py  test_register.py  test_token.py  test_unit_login.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .eslintrc.cjs  .prettierrc  package.json
frontend/src/: App.svelte  Generator.svelte  Nav.svelte  app.css  auth.js  main.js
migrations/models/: 0_20250302080806_init.py  1_20250325000000_add_slips.py
