[project]
name = "openchains"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "passlib (==1.7.4)",
    "httpx (>=0.28.1,<0.29.0)",
    "tortoise-orm (>=0.24.1,<0.25.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "cryptography (>=44.0.1,<45.0.0)",
    "python-jose[cryptography] (==3.3.0)",
    "bcrypt (==3.2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
behave = "^1.2.6"
pytest-asyncio = "^0.25.3"
pre-commit = "^3.7.0"
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.11.0"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py312']  # Use Python 3.12 until Black supports 3.13
include = '\.pyi?'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
